# Intring

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  partitions.csv  sdkconfig  sdkconfig.old
components/LSM6DS3TR/: CMakeLists.txt
components/LSM6DS3TR/imu_buffer/: imu_buffer.c  imu_buffer.h
components/LSM6DS3TR/lsm6ds3tr/: lsm6ds3tr-c_reg.h  lsm6ds3tr.c  lsm6ds3tr.h  lsm6ds3tr_c_read_data_polling.c  lsm6ds3tr_c_read_data_polling.h  lsm6ds3tr_quaternion_test.c  lsm6ds3tr_quaternion_test.h
components/air_mouse/: CMakeLists.txt  air_mouse.c  air_mouse.h
components/ble_hid/: CMakeLists.txt  app_ble_hid.c  app_ble_hid.h  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.h
components/ble_ota/: CMakeLists.txt  app_ble_ota.c  app_ble_ota.h
components/gesture_detect/: CMakeLists.txt  app_gesture_detect.cc  app_gesture_detect.h  gesture_model.cc  gesture_model.h  model_config.h  test_data.cc  test_data.h
components/key/: CMakeLists.txt  keyRead.c  keyRead.h
components/light_sleep/: CMakeLists.txt  app_sleep.c  app_sleep.h  gpio_wakeup.c  light_sleep.h
main/: CMakeLists.txt  Kconfig.projbuild  data_share.h  idf_component.yml  inter_ring_main.c  project_config.h
tools/nn/: Serial_read.py  collect_data.py  requirements.txt  test.ipynb  train.ipynb  train_model.py
tools/nn/Models/: gesture_model.cc  gesture_model.h5  gesture_model_quant.tflite
tools/nn/TraningData/0/: left_1.csv  left_11.csv  left_12.csv  left_13.csv  left_14.csv  left_15.csv  left_16.csv  left_17.csv  left_18.csv  left_19.csv  left_2.csv  left_20.csv  left_21.csv  left_22.csv  left_23.csv  left_24.csv  left_25.csv  left_26.csv  left_27.csv  left_28.csv  left_29.csv  left_3.csv  left_30.csv  left_31.csv  left_32.csv  left_33.csv  left_34.csv  left_35.csv  left_36.csv  left_37.csv  left_38.csv  left_39.csv  left_4.csv  left_40.csv  left_41.csv  left_42.csv  left_43.csv  left_44.csv  left_45.csv  left_46.csv  (+26 more)
tools/nn/TraningData/1/: right_1.csv  right_10.csv  right_11.csv  right_12.csv  right_13.csv  right_14.csv  right_15.csv  right_16.csv  right_17.csv  right_18.csv  right_19.csv  right_2.csv  right_20.csv  right_21.csv  right_22.csv  right_23.csv  right_24.csv  right_25.csv  right_26.csv  right_27.csv  right_28.csv  right_29.csv  right_3.csv  right_30.csv  right_31.csv  right_32.csv  right_35.csv  right_36.csv  right_37.csv  right_38.csv  right_39.csv  right_4.csv  right_40.csv  right_41.csv  right_42.csv  right_43.csv  right_44.csv  right_45.csv  right_46.csv  right_47.csv  (+14 more)
tools/nn/TraningData/2/: up_1.csv  up_10.csv  up_11.csv  up_12.csv  up_13.csv  up_14.csv  up_15.csv  up_16.csv  up_17.csv  (+44 more)
tools/ota/: ble_ota_upload.py
(+283 files in other folders)
